# licenseFetcher

./: .gitignore  README.md  licenseFetcher.cabal  stack.yaml
lib/: LicenseFetcher.hs
src/: Main.hs
