name:                licenseFetcher
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Martin Buck
maintainer:          buckmartin@buckmartin.de
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LicenseFetcher
  build-depends:       base
                     , directory
                     , HTTP
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror

executable licenseFetcher
  main-is:             Main.hs
  build-depends:       base
                     , licenseFetcher 
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -W -fwarn-incomplete-patterns -Werror
